; ModuleID = '/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/cmd/ztest/extr_ztest.c_ztest_kill.c'
source_filename = "/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/cmd/ztest/extr_ztest.c_ztest_kill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@ztest_spa = common dso_local global i32 0, align 4
@spa_namespace_lock = common dso_local global i32 0, align 4
@B_FALSE = common dso_local global i32 0, align 4
@FTAG = common dso_local global i32 0, align 4
@SIGKILL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @ztest_kill to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ztest_kill(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load i32, i32* @ztest_spa, align 4
  %4 = call i32 @spa_normal_class(i32 %3)
  %5 = call i32 @metaslab_class_get_alloc(i32 %4)
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 4
  %8 = load i32, i32* @ztest_spa, align 4
  %9 = call i32 @spa_normal_class(i32 %8)
  %10 = call i32 @metaslab_class_get_space(i32 %9)
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = call i32 @mutex_enter(i32* @spa_namespace_lock)
  %14 = load i32, i32* @ztest_spa, align 4
  %15 = load i32, i32* @B_FALSE, align 4
  %16 = load i32, i32* @B_FALSE, align 4
  %17 = call i32 @spa_write_cachefile(i32 %14, i32 %15, i32 %16)
  %18 = call i32 @mutex_exit(i32* @spa_namespace_lock)
  %19 = load i32, i32* @FTAG, align 4
  %20 = call i32 @zfs_dbgmsg_print(i32 %19)
  %21 = call i32 (...) @getpid()
  %22 = load i32, i32* @SIGKILL, align 4
  %23 = call i32 @kill(i32 %21, i32 %22)
  ret void
}

declare dso_local i32 @metaslab_class_get_alloc(i32) #1

declare dso_local i32 @spa_normal_class(i32) #1

declare dso_local i32 @metaslab_class_get_space(i32) #1

declare dso_local i32 @mutex_enter(i32*) #1

declare dso_local i32 @spa_write_cachefile(i32, i32, i32) #1

declare dso_local i32 @mutex_exit(i32*) #1

declare dso_local i32 @zfs_dbgmsg_print(i32) #1

declare dso_local i32 @kill(i32, i32) #1

declare dso_local i32 @getpid(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
